--- a/index.html
+++ b/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify - Web Player: Music for free</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="left">
+        <div class="home">
+          <div class="logo">
+            <img class="invert" src="./images/logo.svg" alt="logo" />
+          </div>
+          <span
+            ><img
+              class="home-links invert"
+              src="./images/home.svg"
+              alt="home"
+            />Home</span
+          >
+          <span
+            ><img
+              class="home-links invert"
+              src="./images/search.svg"
+              alt="search"
+            />Search</span
+          >
+        </div>
+
+        <div class="library">
+          <div class="library-header">
+            <div class="title">
+              <img class="invert" src="./images/playlist.svg" alt="" />
+              <h2>Your Library</h2>
+            </div>
+            <div class="add-button">
+              <i class="fa-solid fa-plus"></i>
+            </div>
+          </div>
+          <div class="library-desc">
+            <h2>Create your first playlist</h2>
+          </div>
+          <div class="library-footer">
+            <div class="lib-footer-links">
+                <p>Legal</p>
+                <p>Safety & Privacy Center</p>
+                <p>Privacy Policy</p>
+                <p>Cookies</p>
+                <p>About Ads</p>
+                <p>Accessibility</p>
+            </div>
+            <div class="cookies">Cookies</div>
+            <div class="language">
+                <i class="fa-solid fa-globe"></i>
+                <span>English</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="right"></div>
+    </div>
+  </body>
 </html>
