--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify - Web Player: Music for free</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -54,6 +55,13 @@
           </div>
           <div class="library-desc">
             <h2>Create your first playlist</h2>
+            <h4>It's easy we will help you</h4>
+            <button class="btn" id="create-playlist">Create playlist</button>
+          </div>
+          <div class="library-desc podcasts">
+            <h2>Let's find some podcasts to follow</h2>
+            <h4>We'll keep you updated on new episodes</h4>
+            <button class="btn" id="create-playlist">Browse Podcasts</button>
           </div>
           <div class="library-footer">
             <div class="lib-footer-links">
@@ -73,7 +81,33 @@
         </div>
       </div>
 
-      <div class="right"></div>
+      <div class="right">
+        <div class="top-nav">
+          <div class="left-top-nav">
+            <div class="prev">
+              <i class="fa-solid fa-chevron-left"></i>
+            </div>
+            <div class="next">
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+          </div>
+          <div class="right-top-nav">
+            <button class="btn" id="explore-premium">Explore Premimum</button>
+            <button class="btn invert" id="app-install"><i class="fa-solid fa-circle-arrow-down"></i>Install App</button>
+            <button class="btn invert" id="notifications"><i class="fa-regular fa-bell"></i></button>
+            <button class="btn invert" id="user-profile">
+              S
+            </button>
+          </div>
+        </div>
+      </div>
+
+     
     </div>
+    <div class="bottom"></div>
   </body>
 </html>
+
+
+
+
